[project]
name = "python-flux"
version = "0.0.2"
authors = [
  { name="Juan Pablo Bochard", email="jbochard@gmail.com" },
]
description = "Librería que utiliza generadores de python para simular procesamiento de flujo de datos"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jbochard/python-flux"
"Bug Tracker" = "https://github.com/jbochard/python-flux/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"