[project]
name = "python-flux"
authors = [
  { name="Juan Pablo Bochard", email="jbochard@gmail.com" },
]
description = "Librería que utiliza generadores de python para simular procesamiento de flujo de datos"
license = {text="GPL-3.0-or-later"}
requires-python = ">=3.7"
dynamic = ["version", "readme"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jbochard/python-flux"
"Bug Tracker" = "https://github.com/jbochard/python-flux/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "version.txt"}
readme = {file = ["README.md"]}